--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&family=Quicksand&display=swap");
+html, body {
+  height: 100%;
+}
+
 body {
   background-color: #e8e8e8;
   color: #39404D;
@@ -12,10 +16,14 @@ body {
 
 h1 {
   font-size: 3rem;
+  font-family: "Comfortaa";
+  padding: 1rem;
 }
 
 h2 {
   font-size: 2rem;
+  font-family: "Comfortaa";
+  padding: .6rem;
 }
 
 header {
@@ -33,8 +41,8 @@ main {
 }
 
 div#weather-card {
-  margin: 1rem auto;
-  padding: 1em;
+  margin: 4rem auto;
+  padding: 3em 1em;
   border-radius: 10px;
   display: -ms-grid;
   display: grid;
@@ -50,18 +58,24 @@ div#weather-card {
   }
 }
 
+.weather-section {
+  margin: 1em auto;
+}
+
 input {
   font-size: 1.2em;
   border: none;
   width: 100%;
   padding: 0.5em;
   margin-bottom: 0.5em;
+  font-family: "Quicksand";
 }
 
 button {
   font-size: 1.2em;
   color: #f4f4f2;
   background-color: #39404D;
+  font-family: "Quicksand";
   border: none;
   padding: .5em;
 }
@@ -76,7 +90,7 @@ div#current-weather-holder {
 }
 
 img#current-weather-icon {
-  height: 3em;
+  height: 4em;
 }
 
 span#current-temp {
@@ -106,9 +120,36 @@ span#current-high-low {
   font-size: 2em;
 }
 
+div#five-day-weather {
+  width: 80%;
+}
+
+div#five-day-holder {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
+div#five-day {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 150px;
+          flex: 0 1 150px;
+  /*  No stretching: */
+  margin: 2rem;
+  padding: 2rem;
+}
+
 footer {
   width: 100%;
-  position: fixed;
   display: -ms-grid;
   display: grid;
   bottom: 0;
